--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
     currency1="{{ cur.currency1 }}"
     currency2="{{ cur.currency2 }}"
     (changeCurrency)="onChangeCurrency($event)"
+    (deletRow)="onDeleteRow($event)"
     index="{{ i }}"
   ></app-currency-converter>
 
