--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
     currency2="{{ cur.currency2 }}"
     (changeCurrency)="onChangeCurrency($event)"
     (deletRow)="onDeleteRow($event)"
-    index="{{ i }}"
+    [index]="i"
   ></app-currency-converter>
 
   <hr>
