--- a/src/app/currency-converter/currency-converter.component.html
+++ b/src/app/currency-converter/currency-converter.component.html
@@ -21,7 +21,7 @@
         <option value="" style="display: none">Выберите</option>
         <option *ngFor="let currency of listCurrencies" [value]="currency.id">{{ currency.currencyName }}</option>
       </select>
-      <input type="number" class="form-control" placeholder="Количество" [value]="amountTo | number" disabled>
+      <input type="number" class="form-control" placeholder="Количество" [value]="amountTo" disabled>
     </div>
   </div>
 
