--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,15 @@
 <div class="container">
-  <app-currency-converter
-    *ngFor="let cur of components; let i = index"
-    [listCurrencies]="listCurrencies"
-    currency1="{{ cur.currency1 }}"
-    currency2="{{ cur.currency2 }}"
-    (changeCurrency)="onChangeCurrency(i, $event)"
-    (deletRow)="onDeleteRow(i)"
-  ></app-currency-converter>
-
-  <hr>
-  <div class="col-md-12 text-center">
-    <button type="button" (click)="addComponent()" class="btn btn-primary">Добавить конвертер</button>
-  </div>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+          <a class="nav-link" routerLink="">Конвертер</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="/test">Тест</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <router-outlet></router-outlet>
 </div>
