--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
           <a class="nav-link" routerLink="">Конвертер</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" routerLink="/test">Тест</a>
+          <a class="nav-link" routerLink="/firebase">Фаербейз</a>
         </li>
       </ul>
     </div>
