--- a/src/app/currency-converter/currency/cur.component.html
+++ b/src/app/currency-converter/currency/cur.component.html
@@ -6,8 +6,7 @@
   (changeCurrency)="onChangeCurrency(i, $event)"
   (deletRow)="onDeleteRow(i)"
 ></app-currency-converter>
-
 <hr>
 <div class="col-md-12 text-center">
-  <button type="button" (click)="addComponent()" class="btn btn-primary">Добавить конвертер</button>
+  <button type="button" (click)="addComponent()" class="btn btn-primary">Добавить строку</button>
 </div>
