rework firebase module

--- a/src/app/firebase/firebase.component.html
+++ b/src/app/firebase/firebase.component.html
@@ -55,6 +55,8 @@
   Выйти
 </button>
 
+<router-outlet></router-outlet>
+
 <!--<button (click)="signup()" [disabled]="!email || !password">-->
   <!--Signup-->
 <!--</button>-->
